Deprecate ghc-8.2.2 and copyright update

--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -9,10 +9,10 @@ homepage:               http://github.com/haskell-works/hw-json#readme
 bug-reports:            https://github.com/haskell-works/hw-json/issues
 author:                 John Ky
 maintainer:             newhoggy@gmail.com
-copyright:              2016-2019 John Ky
+copyright:              2016-2020 John Ky
 license:                BSD-3-Clause
 license-file:           LICENSE
-tested-with:            GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4, GHC == 8.2.2
+tested-with:            GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4
 build-type:             Simple
 extra-source-files:     README.md
                         corpus/5000B.json
@@ -37,43 +37,43 @@ flag sse42
   manual:       False
   default:      False
 
-common base                     { build-depends: base                     >= 4          && < 5      }
+common base                       { build-depends: base                       >= 4.11       && < 5      }
 
-common aeson                    { build-depends: aeson                    >= 1.4.3.0    && < 1.5    }
-common ansi-wl-pprint           { build-depends: ansi-wl-pprint           >= 0.6.8.2    && < 0.7    }
-common array                    { build-depends: array                    >= 0.5        && < 0.6    }
-common attoparsec               { build-depends: attoparsec               >= 0.13       && < 0.14   }
-common bits-extra               { build-depends: bits-extra               >= 0.0.1.3    && < 0.1    }
-common bytestring               { build-depends: bytestring               >= 0.10.6     && < 0.11   }
-common criterion                { build-depends: criterion                >= 1.4        && < 1.6    }
-common directory                { build-depends: directory                >= 1.3        && < 1.4    }
-common dlist                    { build-depends: dlist                    >= 0.8        && < 0.9    }
-common doctest                  { build-depends: doctest                  >= 0.16.2     && < 0.17   }
-common doctest-discover         { build-depends: doctest-discover         >= 0.2        && < 0.3    }
-common generic-lens             { build-depends: generic-lens             >= 1.2.0.1    && < 1.3    }
-common hedgehog                 { build-depends: hedgehog                 >= 0.6        && < 1.1    }
-common hspec                    { build-depends: hspec                    >= 2.4        && < 3      }
-common hw-balancedparens        { build-depends: hw-balancedparens        >= 0.3.0.0    && < 0.4    }
-common hw-bits                  { build-depends: hw-bits                  >= 0.7.0.5    && < 0.8    }
-common hw-hspec-hedgehog        { build-depends: hw-hspec-hedgehog        >= 0.1.0.4    && < 0.2    }
-common hw-json-simd             { build-depends: hw-json-simd             >= 0.1.0.2    && < 0.2    }
-common hw-json-simple-cursor    { build-depends: hw-json-simple-cursor    >= 0.1.0.1    && < 0.2    }
-common hw-json-standard-cursor  { build-depends: hw-json-standard-cursor  >= 0.2.0.1    && < 0.3    }
-common hw-mquery                { build-depends: hw-mquery                >= 0.2.0.0    && < 0.3    }
-common hw-parser                { build-depends: hw-parser                >= 0.1        && < 0.2    }
-common hw-prim                  { build-depends: hw-prim                  >= 0.6.2.32   && < 0.7    }
-common hw-rankselect            { build-depends: hw-rankselect            >= 0.13       && < 0.14   }
-common hw-rankselect-base       { build-depends: hw-rankselect-base       >= 0.3.2.1    && < 0.4    }
-common hw-simd                  { build-depends: hw-simd                  >= 0.1.1.2    && < 0.2    }
-common lens                     { build-depends: lens                     >= 4          && < 5      }
-common mmap                     { build-depends: mmap                     >= 0.5        && < 0.6    }
-common optparse-applicative     { build-depends: optparse-applicative     >= 0.14       && < 0.16   }
-common scientific               { build-depends: scientific               >= 0.3.6.2    && < 0.4    }
-common text                     { build-depends: text                     >= 1.2        && < 1.3    }
-common transformers             { build-depends: transformers             >= 0.4        && < 0.6    }
-common unordered-containers     { build-depends: unordered-containers     >= 0.2        && < 0.3    }
-common vector                   { build-depends: vector                   >= 0.12       && < 0.13   }
-common word8                    { build-depends: word8                    >= 0.1        && < 0.2    }
+common aeson                      { build-depends: aeson                      >= 1.4.3.0    && < 1.5    }
+common ansi-wl-pprint             { build-depends: ansi-wl-pprint             >= 0.6.8.2    && < 0.7    }
+common array                      { build-depends: array                      >= 0.5        && < 0.6    }
+common attoparsec                 { build-depends: attoparsec                 >= 0.13       && < 0.14   }
+common bits-extra                 { build-depends: bits-extra                 >= 0.0.1.3    && < 0.1    }
+common bytestring                 { build-depends: bytestring                 >= 0.10.6     && < 0.11   }
+common criterion                  { build-depends: criterion                  >= 1.4        && < 1.6    }
+common directory                  { build-depends: directory                  >= 1.3        && < 1.4    }
+common dlist                      { build-depends: dlist                      >= 0.8        && < 0.9    }
+common doctest                    { build-depends: doctest                    >= 0.16.2     && < 0.17   }
+common doctest-discover           { build-depends: doctest-discover           >= 0.2        && < 0.3    }
+common generic-lens               { build-depends: generic-lens               >= 1.2.0.1    && < 1.3    }
+common hedgehog                   { build-depends: hedgehog                   >= 0.6        && < 1.1    }
+common hspec                      { build-depends: hspec                      >= 2.4        && < 3      }
+common hw-balancedparens          { build-depends: hw-balancedparens          >= 0.3.0.0    && < 0.4    }
+common hw-bits                    { build-depends: hw-bits                    >= 0.7.0.5    && < 0.8    }
+common hw-hspec-hedgehog          { build-depends: hw-hspec-hedgehog          >= 0.1.0.4    && < 0.2    }
+common hw-json-simd               { build-depends: hw-json-simd               >= 0.1.0.2    && < 0.2    }
+common hw-json-simple-cursor      { build-depends: hw-json-simple-cursor      >= 0.1.0.1    && < 0.2    }
+common hw-json-standard-cursor    { build-depends: hw-json-standard-cursor    >= 0.2.0.1    && < 0.3    }
+common hw-mquery                  { build-depends: hw-mquery                  >= 0.2.0.0    && < 0.3    }
+common hw-parser                  { build-depends: hw-parser                  >= 0.1        && < 0.2    }
+common hw-prim                    { build-depends: hw-prim                    >= 0.6.2.32   && < 0.7    }
+common hw-rankselect              { build-depends: hw-rankselect              >= 0.13       && < 0.14   }
+common hw-rankselect-base         { build-depends: hw-rankselect-base         >= 0.3.2.1    && < 0.4    }
+common hw-simd                    { build-depends: hw-simd                    >= 0.1.1.2    && < 0.2    }
+common lens                       { build-depends: lens                       >= 4          && < 5      }
+common mmap                       { build-depends: mmap                       >= 0.5        && < 0.6    }
+common optparse-applicative       { build-depends: optparse-applicative       >= 0.14       && < 0.16   }
+common scientific                 { build-depends: scientific                 >= 0.3.6.2    && < 0.4    }
+common text                       { build-depends: text                       >= 1.2        && < 1.3    }
+common transformers               { build-depends: transformers               >= 0.4        && < 0.6    }
+common unordered-containers       { build-depends: unordered-containers       >= 0.2        && < 0.3    }
+common vector                     { build-depends: vector                     >= 0.12       && < 0.13   }
+common word8                      { build-depends: word8                      >= 0.1        && < 0.2    }
 
 common semigroups   { if impl(ghc <  8    ) { build-depends: semigroups     >= 0.16     && < 0.19 } }
 
