--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -12,7 +12,7 @@ maintainer:             newhoggy@gmail.com
 copyright:              2016-2021 John Ky
 license:                BSD-3-Clause
 license-file:           LICENSE
-tested-with:            GHC == 9.0.1, GHC == 8.10.7, GHC == 8.8.4, GHC == 8.6.5
+tested-with:            GHC == 9.2.2, GHC == 9.0.2, GHC == 8.10.7, GHC == 8.8.4, GHC == 8.6.5
 build-type:             Simple
 extra-source-files:     README.md
                         corpus/5000B.json
@@ -39,7 +39,7 @@ flag sse42
 
 common base                       { build-depends: base                       >= 4.11       && < 5      }
 
-common aeson                      { build-depends: aeson                      >= 1.4.3.0    && < 1.6    }
+common aeson                      { build-depends: aeson                      >= 2.0        && < 2.1    }
 common ansi-wl-pprint             { build-depends: ansi-wl-pprint             >= 0.6.8.2    && < 0.7    }
 common array                      { build-depends: array                      >= 0.5        && < 0.6    }
 common attoparsec                 { build-depends: attoparsec                 >= 0.13       && < 0.15   }
@@ -48,10 +48,10 @@ common bytestring                 { build-depends: bytestring                 >=
 common criterion                  { build-depends: criterion                  >= 1.4        && < 1.6    }
 common directory                  { build-depends: directory                  >= 1.3        && < 1.4    }
 common dlist                      { build-depends: dlist                      >= 0.8        && < 1.1    }
-common doctest                    { build-depends: doctest                    >= 0.16.2     && < 0.19   }
+common doctest                    { build-depends: doctest                    >= 0.16.2     && < 0.21   }
 common doctest-discover           { build-depends: doctest-discover           >= 0.2        && < 0.3    }
 common generic-lens               { build-depends: generic-lens               >= 1.2.0.1    && < 2.3    }
-common hedgehog                   { build-depends: hedgehog                   >= 0.6        && < 1.1    }
+common hedgehog                   { build-depends: hedgehog                   >= 0.6        && < 1.2    }
 common hspec                      { build-depends: hspec                      >= 2.4        && < 3      }
 common hw-balancedparens          { build-depends: hw-balancedparens          >= 0.3.0.0    && < 0.5    }
 common hw-bits                    { build-depends: hw-bits                    >= 0.7.0.5    && < 0.8    }
@@ -67,10 +67,10 @@ common hw-rankselect-base         { build-depends: hw-rankselect-base         >=
 common hw-simd                    { build-depends: hw-simd                    >= 0.1.1.2    && < 0.2    }
 common lens                       { build-depends: lens                       >= 4          && < 6      }
 common mmap                       { build-depends: mmap                       >= 0.5        && < 0.6    }
-common optparse-applicative       { build-depends: optparse-applicative       >= 0.14       && < 0.17   }
+common optparse-applicative       { build-depends: optparse-applicative       >= 0.14       && < 0.18   }
 common scientific                 { build-depends: scientific                 >= 0.3.6.2    && < 0.4    }
-common text                       { build-depends: text                       >= 1.2        && < 1.3    }
-common transformers               { build-depends: transformers               >= 0.4        && < 0.6    }
+common text                       { build-depends: text                       >= 1.2        && < 2.1    }
+common transformers               { build-depends: transformers               >= 0.4        && < 0.7    }
 common unordered-containers       { build-depends: unordered-containers       >= 0.2        && < 0.3    }
 common vector                     { build-depends: vector                     >= 0.12       && < 0.13   }
 common word8                      { build-depends: word8                      >= 0.1        && < 0.2    }
