--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -17,8 +17,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ["9.2.2", "9.0.2", "8.10.7", "8.8.4", "8.6.5"]
-        os: [ubuntu-latest, windows-latest]
+        ghc: ["9.4.2", "9.2.4", "9.0.2", "8.10.7", "8.8.4", "8.6.5"]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+        exclude:
+          - ghc: "9.4.2"
+            os: windows-latest
 
     steps:
       - uses: actions/checkout@v2
