--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -43,6 +43,7 @@ common aeson                      { build-depends: aeson                      >=
 common ansi-wl-pprint             { build-depends: ansi-wl-pprint             >= 0.6.8.2    && < 2      }
 common array                      { build-depends: array                      >= 0.5        && < 0.6    }
 common attoparsec                 { build-depends: attoparsec                 >= 0.13       && < 0.15   }
+common attoparsec-aeson           { build-depends: attoparsec-aeson           >= 2          && < 3      }
 common bits-extra                 { build-depends: bits-extra                 >= 0.0.1.3    && < 0.1    }
 common bytestring                 { build-depends: bytestring                 >= 0.10.6     && < 0.13   }
 common criterion                  { build-depends: criterion                  >= 1.4        && < 1.7    }
@@ -92,6 +93,7 @@ library
                       , aeson
                       , ansi-wl-pprint
                       , attoparsec
+                      , attoparsec-aeson
                       , bits-extra
                       , bytestring
                       , dlist
@@ -106,6 +108,7 @@ library
                       , hw-rankselect-base
                       , hw-simd
                       , mmap
+                      , scientific
                       , text
                       , vector
                       , word8
@@ -114,14 +117,14 @@ library
   autogen-modules:      Paths_hw_json
   exposed-modules:      HaskellWorks.Data.Json.DecodeError
                         HaskellWorks.Data.Json.FromValue
-                        HaskellWorks.Data.Json.Internal.Standard.Cursor.Token
-                        HaskellWorks.Data.Json.Internal.Standard.Token.Tokenize
                         HaskellWorks.Data.Json.Internal.CharLike
                         HaskellWorks.Data.Json.Internal.Doc
                         HaskellWorks.Data.Json.Internal.Index
                         HaskellWorks.Data.Json.Internal.Orphans
                         HaskellWorks.Data.Json.Internal.PartialIndex
                         HaskellWorks.Data.Json.Internal.Slurp
+                        HaskellWorks.Data.Json.Internal.Standard.Cursor.Token
+                        HaskellWorks.Data.Json.Internal.Standard.Token.Tokenize
                         HaskellWorks.Data.Json.Internal.Token
                         HaskellWorks.Data.Json.Internal.Token.Types
                         HaskellWorks.Data.Json.Internal.Value
@@ -168,6 +171,7 @@ test-suite hw-json-test
   import:               base, config
                       , aeson
                       , attoparsec
+                      , attoparsec-aeson
                       , bytestring
                       , dlist
                       , hedgehog
